imputing information on the data

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -12,16 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calling the csv file of the dataset\n",
     "df = pd.read_csv(r\"C:\\Projects\\HouseRentPrediction\\notebooks\\HouseRentPrediction.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -273,18 +274,19 @@
        "[4746 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking for the dataset\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -425,18 +427,19 @@
        "4         1    Contact Owner  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking the first five rows of the dataset\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -577,18 +580,19 @@
        "4745         2    Contact Owner  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking the last five rows of the dataset\n",
     "df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -691,18 +695,19 @@
        "max       6.000000  3.500000e+06  8000.000000    10.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking the statistical method of the dataset\n",
     "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -714,18 +719,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# deriving the entire columns of the dataset\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -755,12 +761,13 @@
     }
    ],
    "source": [
+    "# checking information of the dataset\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -808,18 +815,19 @@
        "[4746 rows x 12 columns]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking if theres a null or missing values in the dataset\n",
     "df.isnull"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -840,18 +848,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking the total sum of null or missing values in the dataset\n",
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -871,13 +880,35 @@
        "Length: 4746, dtype: bool"
       ]
      },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking if theres duplication in the dataset\n",
+    "df.duplicated()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4746, 12)"
+      ]
+     },
      "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.duplicated()"
+    "# checking the shape of the data shape\n",
+    "df.shape"
    ]
   },
   {
