--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "[4746 rows x 12 columns]"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "4         1    Contact Owner  "
       ]
      },
-     "execution_count": 410,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -580,19 +580,19 @@
        "4745         2    Contact Owner  "
       ]
      },
-     "execution_count": 411,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# checking the last five rows of the dataset\n",
-    "df.tail()"
+    "df.tail()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "max       6.000000  3.500000e+06  8000.000000    10.000000"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "[4746 rows x 12 columns]>"
       ]
      },
-     "execution_count": 415,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,14 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +888,7 @@
        "Length: 4746, dtype: bool"
       ]
      },
-     "execution_count": 418,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +909,7 @@
        "(4746, 9)"
       ]
      },
-     "execution_count": 419,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,13 +934,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +964,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +984,7 @@
        "Index(['BHK', 'Rent', 'Size', 'Bathroom'], dtype='object')"
       ]
      },
-     "execution_count": 423,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1150,7 @@
        "[4746 rows x 5 columns]"
       ]
      },
-     "execution_count": 424,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1291,7 @@
        "[4746 rows x 4 columns]"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1337,7 @@
        "[4746 rows x 5 columns]>"
       ]
      },
-     "execution_count": 426,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1370,7 @@
        "[4746 rows x 4 columns]>"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1460,7 @@
        "Point of Contact   4746      3     Contact Owner  3216"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1484,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1511,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1619,7 @@
        "Bathroom      2.0       10.0  "
       ]
      },
-     "execution_count": 431,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1639,7 @@
        "<Figure size 900x800 with 0 Axes>"
       ]
      },
-     "execution_count": 432,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1674,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1859,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 435,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1898,27 +1886,15 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#encoding"
+    "# Encoding"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1905,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 436,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1940,7 +1916,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BHK', 'Rent', 'Size', 'Bathroom'], dtype='object')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1945,7 @@
        "array(['Super Area', 'Carpet Area', 'Built Area'], dtype=object)"
       ]
      },
-     "execution_count": 437,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1970,7 +1966,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 438,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1981,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1986,7 @@
        "array(['Unfurnished', 'Semi-Furnished', 'Furnished'], dtype=object)"
       ]
      },
-     "execution_count": 439,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2001,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2006,7 @@
        "array(['Bachelors/Family', 'Bachelors', 'Family'], dtype=object)"
       ]
      },
-     "execution_count": 440,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2021,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2026,7 @@
        "array(['Contact Owner', 'Contact Agent', 'Contact Builder'], dtype=object)"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2047,22 +2043,15 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# it is an ordinal encoding"
+    "# Ordinal Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2167,7 @@
        "4         1    Contact Owner  "
       ]
      },
-     "execution_count": 442,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2189,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,14 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2232,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2240,12 +2222,12 @@
     "df[\"City\"]=df[\"City\"].map(City_map)\n",
     "df[\"Furnishing Status\"]=df[\"Furnishing Status\"].map(Furnishing_Status_map)\n",
     "df[\"Tenant Preferred\"]=df[\"Tenant Preferred\"].map(Tenant_Preferred_map)\n",
-    "df[\"Point of Contact\"]=df[\"Point of Contact\"].map(Point_of_Contact_map)"
+    "df[\"Point of Contact\"]=df[\"Point of Contact\"].map(Point_of_Contact_map)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2343,7 @@
        "4         1                 1  "
       ]
      },
-     "execution_count": 446,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2369,13 +2351,6 @@
    "source": [
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
