model_training updated

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4         1    Contact Owner  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "4         1    Contact Owner  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "[4746 rows x 8 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "[4746 rows x 1 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,10 +667,277 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_cols=x.select_dtypes(include=\"object\").columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_cols=x.select_dtypes(exclude=\"object\").columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area Type</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Furnishing Status</th>\n",
+       "      <th>Tenant Preferred</th>\n",
+       "      <th>Point of Contact</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Super Area</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>Bachelors/Family</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Super Area</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Bachelors/Family</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Super Area</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Bachelors/Family</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Super Area</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>Bachelors/Family</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Carpet Area</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4741</th>\n",
+       "      <td>Carpet Area</td>\n",
+       "      <td>Hyderabad</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Bachelors/Family</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4742</th>\n",
+       "      <td>Super Area</td>\n",
+       "      <td>Hyderabad</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Bachelors/Family</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4743</th>\n",
+       "      <td>Carpet Area</td>\n",
+       "      <td>Hyderabad</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Bachelors/Family</td>\n",
+       "      <td>Contact Agent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4744</th>\n",
+       "      <td>Carpet Area</td>\n",
+       "      <td>Hyderabad</td>\n",
+       "      <td>Semi-Furnished</td>\n",
+       "      <td>Family</td>\n",
+       "      <td>Contact Agent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4745</th>\n",
+       "      <td>Carpet Area</td>\n",
+       "      <td>Hyderabad</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Contact Owner</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4746 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Area Type       City Furnishing Status  Tenant Preferred  \\\n",
+       "0      Super Area    Kolkata       Unfurnished  Bachelors/Family   \n",
+       "1      Super Area    Kolkata    Semi-Furnished  Bachelors/Family   \n",
+       "2      Super Area    Kolkata    Semi-Furnished  Bachelors/Family   \n",
+       "3      Super Area    Kolkata       Unfurnished  Bachelors/Family   \n",
+       "4     Carpet Area    Kolkata       Unfurnished         Bachelors   \n",
+       "...           ...        ...               ...               ...   \n",
+       "4741  Carpet Area  Hyderabad    Semi-Furnished  Bachelors/Family   \n",
+       "4742   Super Area  Hyderabad    Semi-Furnished  Bachelors/Family   \n",
+       "4743  Carpet Area  Hyderabad    Semi-Furnished  Bachelors/Family   \n",
+       "4744  Carpet Area  Hyderabad    Semi-Furnished            Family   \n",
+       "4745  Carpet Area  Hyderabad       Unfurnished         Bachelors   \n",
+       "\n",
+       "     Point of Contact  \n",
+       "0       Contact Owner  \n",
+       "1       Contact Owner  \n",
+       "2       Contact Owner  \n",
+       "3       Contact Owner  \n",
+       "4       Contact Owner  \n",
+       "...               ...  \n",
+       "4741    Contact Owner  \n",
+       "4742    Contact Owner  \n",
+       "4743    Contact Agent  \n",
+       "4744    Contact Agent  \n",
+       "4745    Contact Owner  \n",
+       "\n",
+       "[4746 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.select_dtypes(include=\"object\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Rent'], dtype='object')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.select_dtypes(exclude=\"object\").columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Area Type', 'City', 'Furnishing Status', 'Tenant Preferred',\n",
+       "       'Point of Contact'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BHK', 'Size', 'Bathroom'], dtype='object')"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'include' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Projects\\HouseRentPrediction\\notebooks\\model_training.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Projects/HouseRentPrediction/notebooks/model_training.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m y\u001b[39m.\u001b[39mselect_dtypes(include\u001b[39m!=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mobject\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'include' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "y.select_dtypes(include!=\"object\")"
+   ]
   }
  ],
  "metadata": {
