--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4         1    Contact Owner  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BHK                  0\n",
+       "Rent                 0\n",
+       "Size                 0\n",
+       "Area Type            0\n",
+       "City                 0\n",
+       "Furnishing Status    0\n",
+       "Tenant Preferred     0\n",
+       "Bathroom             0\n",
+       "Point of Contact     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +338,7 @@
        "4         1    Contact Owner  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +360,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +580,7 @@
        "[4746 rows x 8 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +685,7 @@
        "[4746 rows x 1 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +869,7 @@
        "[4746 rows x 5 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +889,7 @@
        "Index(['Rent'], dtype='object')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +911,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +931,7 @@
        "Index(['BHK', 'Size', 'Bathroom'], dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,31 +942,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#customized ranking for each ordinal variable\n",
+    "Area_Type_categories=[\"Super Area\", \"Carpet Area\", \"Built Area\"]\n",
+    "City_categories=['Kolkata', 'Mumbai', 'Bangalore', 'Delhi', 'Chennai', 'Hyderabad']\n",
+    "Furnishing_Status_categories=['Unfurnished', 'Semi-Furnished', 'Furnished']\n",
+    "Tenant_Preferred_categories=['Bachelors/Family', 'Bachelors', 'Family']\n",
+    "Point_of_Contact_categories=['Contact Owner', 'Contact Agent', 'Contact Builder']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer ##for handling missing values\n",
+    "from sklearn.preprocessing import StandardScaler ## Handling Feature Scaling\n",
+    "from sklearn.preprocessing import OrdinalEncoder ##Ordinal Encoder\n",
+    "##pipelines\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_pipeline=Pipeline(\n",
+    "    \n",
+    "    steps=[\n",
+    "        \n",
+    "        (\"imputer\",SimpleImputer()),\n",
+    "        (\"scaler\",StandardScaler())\n",
+    "        \n",
+    "    ]\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_pipeline=Pipeline(\n",
+    "    \n",
+    "    steps=[\n",
+    "        \n",
+    "        ('imputer',SimpleImputer(strategy=\"most frequent\")),\n",
+    "        ('ordinalencoder',OrdinalEncoder(categories=[Area_Type_categories,City_categories,Furnishing_Status_categories,Tenant_Preferred_categories,Point_of_Contact_categories]))\n",
+    "        \n",
+    "    ]\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor=ColumnTransformer(\n",
+    "     [\n",
+    "        \n",
+    "        ('num_pipeline',num_pipeline,numerical_cols),\n",
+    "        ('cat_pipeline',cat_pipeline,categorical_cols)\n",
+    "     ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## train test split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.25,random_state=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'include' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Projects\\HouseRentPrediction\\notebooks\\model_training.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Projects/HouseRentPrediction/notebooks/model_training.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m y\u001b[39m.\u001b[39mselect_dtypes(include\u001b[39m!=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mobject\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'include' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "y.select_dtypes(include!=\"object\")"
-   ]
   }
  ],
  "metadata": {
