--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +996,7 @@
     "    \n",
     "    steps=[\n",
     "        \n",
-    "        ('imputer',SimpleImputer(strategy=\"most frequent\")),\n",
+    "        ('imputer',SimpleImputer(strategy=\"most_frequent\")),\n",
     "        ('ordinalencoder',OrdinalEncoder(categories=[Area_Type_categories,City_categories,Furnishing_Status_categories,Tenant_Preferred_categories,Point_of_Contact_categories]))\n",
     "        \n",
     "    ]\n",
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,13 +1021,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "## train test split\n",
     "from sklearn.model_selection import train_test_split\n",
     "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.25,random_state=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.11039725, -1.44585671,  0.03011518, ...,  1.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-0.11039725,  0.52359002,  0.03011518, ...,  0.        ,\n",
+       "         1.        ,  1.        ],\n",
+       "       [-1.31562369, -0.75735095, -1.1100967 , ...,  1.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [-0.11039725, -0.27699808, -1.1100967 , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-0.11039725, -0.06884518,  0.03011518, ...,  1.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-0.11039725, -0.27699808,  0.03011518, ...,  1.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessor.fit_transform(x_train)"
    ]
   },
   {
