--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "import os\n",
     "from datetime import datetime\n",
-    "from datetime import datetime\n",
+    "import sys\n",
+    "sys.path.append('C:\\\\Projects\\\\HouseRentPrediction')\n",
     "\n"
    ]
   },
@@ -17,14 +18,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2023, 11, 16, 3, 3, 47, 565141)"
+       "datetime.datetime(2023, 11, 17, 18, 11, 23, 214903)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11_16_2023_03_12_26.log'"
+       "'11_17_2023_18_11_23.log'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +72,7 @@
        "('c:\\\\Projects\\\\HouseRentPrediction\\\\notebooks', 'log')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,12 +83,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Projects\\\\HouseRentPrediction\\\\notebooks\\\\logs'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join(os.getcwd(),\"logs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "   "
+    "from src.HouseRentPrediction.logger import logging"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.info(\"I have just tested the thing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "class CustomException(Exception):\n",
+    "    def __init__(self, error_message, error_details):\n",
+    "        self.error_message = error_message\n",
+    "        _, _, exc_tb = error_details.exc_info()\n",
+    "        self.lineno = exc_tb.tb_lineno\n",
+    "        self.file_name = exc_tb.tb_frame.f_code.co_filename\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"Error occurred in Python script name [{0}] line number [{1}] error message [{2}]\".format(\n",
+    "            self.file_name, self.lineno, str(self.error_message))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a=1/0\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'e' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Projects\\HouseRentPrediction\\notebooks\\research.ipynb Cell 13\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Projects/HouseRentPrediction/notebooks/research.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mraise\u001b[39;00m CustomException(e,sys)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'e' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "raise CustomException(e,sys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomException(Exception):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def __str__(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'e' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Projects\\HouseRentPrediction\\notebooks\\research.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Projects/HouseRentPrediction/notebooks/research.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mraise\u001b[39;00m CustomException(e,sys)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'e' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "raise CustomException(e,sys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
